# chess-embedding-experiments

./: .gitignore  README.md  colab_train.ipynb  data.dvc  data.py  dataset.py  evaluate.ipynb  milvus-2-3-1-standalone-docker-compose.yml  model.dvc  model.py  pyproject.toml  requirements.txt  train.py
.dvc/: config
cloud/sagemaker/: train.ipynb
colab/: colab_train.ipynb  setup.sh
data/: .gitignore  raw.dvc  test.dvc  train.dvc
notebooks/: debug_data.ipynb  hello_milvus.ipynb
src/: types.py
src/evaluation/: visualisation.py
src/modeling/: custom_losses.py  model.py
src/preprocessing/: board_representation.py  extract_board.py  generate_board.py
src/run/: evaluate.ipynb  evaluate_tensor_models.ipynb  evaluate_token_models.ipynb  generate_positions.py  generate_random_positions.py  train.py
src/training/: sample_generator.py
src/utils/: data_loader.py  fileops.py
utils/: data_loader.py  sample_generator.py
